Fixed Text Wrap Issue

--- a/media/main.css
+++ b/media/main.css
@@ -51,11 +51,7 @@ pre {
 	
 }
 code {
-	
 	color: white;
 	font-family: 'Courier New', Courier, monospace;
 }
 
-p {
-    white-space: pre-wrap;
-}
